--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <h1 class="text-4xl">Phone hunting</h1>
 
     </header>
-    <main>
+    <main class="container mx-auto mt-4">
+        <section>
+            <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            </div>
+        </section>
 
     </main>
     <footer>
