Added filtre button at search result

--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
 
     </header>
     <main class="container mx-auto mt-4">
+        <section class="bg-gray-100 p-4 m-4">
+            <input id="search-field" type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs" />
+            <button onclick="handleSearch()" class="btn btn-active btn-accent">Search</button>
+        </section>
+
+        <!-- search result -->
         <section>
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            </div>
+            <!-- Show all button -->
+            <div>
+                <button id="show-all-container" class="btn btn-active btn-neutral hidden">Neutral</button>
             </div>
         </section>
 
