Added loading spinner

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
         <!-- search result -->
         <section>
+            <!-- Show loading spinner -->
+            <div id="loading-spinner" class="text-center mt-10 hidden">
+                <span class="loading loading-spinner text-purple-600 loading-lg"></span>
+            </div>
+            <!-- Show result -->
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             </div>
             <!-- Show all button -->
