--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- search result -->
         <section>
-            <!-- Show loading spinner -->
+            <!-- Loading spinner -->
             <div id="loading-spinner" class="text-center mt-10 hidden">
                 <span class="loading loading-spinner text-purple-600 loading-lg"></span>
             </div>
@@ -31,8 +31,8 @@
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             </div>
             <!-- Show all button -->
-            <div>
-                <button id="show-all-container" class="btn btn-active btn-neutral hidden">Neutral</button>
+            <div class="text-center">
+                <button onclick="handleShowAll()" id="show-all-container" class="btn btn-active btn-neutral my-8 hidden">SHOW ALL</button>
             </div>
         </section>
 
