--- a/index.html
+++ b/index.html
@@ -32,10 +32,25 @@
             </div>
             <!-- Show all button -->
             <div class="text-center">
-                <button onclick="handleShowAll()" id="show-all-container" class="btn btn-active btn-neutral my-8 hidden">SHOW ALL</button>
+                <button onclick="handleShowAll()" id="show-all-container"
+                    class="btn btn-active btn-neutral my-8 hidden">SHOW ALL</button>
             </div>
         </section>
-
+        <!-- Show Modal -->
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <h3 id="show-detail-phone-name" class="font-bold text-lg"></h3>
+                <div id="show-detail-container">
+                    
+                </div>
+                <div class="modal-action">
+                    <form method="dialog">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn">Close</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
     </main>
     <footer>
 
